worked on making it responsive

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <title>Changmo's Magic Land</title>
 </head>
 <body>
     <h1 class="title">
-        Changmo's magic land
+        Changmo's Magic Land
     </h1>
 
 
@@ -33,12 +33,12 @@
 
     <div class="descriptionContainer">
         <div class="description wrapper">
-            <h2>DESCRIPTION</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima assumenda voluptatibus tempore eveniet nulla consequatur cumque iusto ad a nisi excepturi hic enim, quae nostrum dolorum cupiditate inventore laborum dicta.</p>
+            <h2>WELCOME</h2>
+            <p>Now, you've got a mission to find our missing Disney friends. Find one pair of each character and bring them back home!!</p>
             <div class="levelContainer">
                 <button class="level level1" data-time="50" data-cardNumber="16">LEVEL1</button>
                 <button class="level level2" data-time="50" data-cardNumber="20">LEVEL2</button>
-                <button class="level level3" data-time="7" data-cardNumber="20"">LEVEL3</button>
+                <button class="level level3" data-time="30" data-cardNumber="20"">LEVEL3</button>
             </div>
             <div class="gameStart">
                 <button>START</button>
