--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="elsa">
-        <img src="assets/bauzinho-web-web-frozen-imagens-png-11.png" alt="">
+        <img src="assets/Elsa.png" alt="">
     </div>
 
 
@@ -23,14 +23,21 @@
         <img src="assets/Konfest-PNG-JPG-Image-Pic-Photo-Free-Download-Royalty-Unlimited-clip-art-sticker-aladdin-disney-cartoon-genie-blue-1 copy.png"
             alt="">
     </div>
+
+
+    <div class="mickey">
+        <img src="assets/baby-mickey-mouse-png-1.png" alt="">
+    </div>
+    
+
+    <div class="minnie">
+        <img src="assets/baby-minnie2.png" alt="">
+    </div>
         
+
     <p class="textMatch"></p>
 
-    <!-- <div class="mickeyMouse">
-        <img src="assets/mickeymouse-background.jpg" alt="">
-    </div> -->
-
-
+   
     <div class="descriptionContainer">
         <div class="description wrapper">
             <h2>WELCOME</h2>
@@ -38,7 +45,7 @@
             <div class="levelContainer">
                 <button class="level level1" data-time="50" data-cardNumber="16">LEVEL1</button>
                 <button class="level level2" data-time="50" data-cardNumber="20">LEVEL2</button>
-                <button class="level level3" data-time="30" data-cardNumber="20"">LEVEL3</button>
+                <button class="level level3" data-time="40" data-cardNumber="20"">LEVEL3</button>
             </div>
             <div class="gameStart">
                 <button>START</button>
@@ -49,8 +56,8 @@
 
     <div class="gameBoard">
         <div class="clock wrapper">
-            <div class="timer"></div>
-            <div class="count"></div>
+            <p class="timer"></p>
+            <p class="count"></p>
             <button class="bonusTime">BONUS</button>
             <button class="resetButton">RESET</button>
         </div>
