made code drier and changed some of the images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch:400,700&display=swap" rel="stylesheet">
+    <link type="image/png" href="assets/favicon32x32.png" rel="icon">
     <link rel="stylesheet" href="styles/style.css">
     <title>Changmo's Magic Land</title>
 </head>
@@ -15,23 +16,22 @@
 
 
     <div class="elsa">
-        <img src="assets/Elsa.png" alt="">
+        <img src="assets/Elsa.png" alt="elsa" aria-hidden="true">
     </div>
 
 
     <div class="alidin">
-        <img src="assets/Konfest-PNG-JPG-Image-Pic-Photo-Free-Download-Royalty-Unlimited-clip-art-sticker-aladdin-disney-cartoon-genie-blue-1 copy.png"
-            alt="">
+        <img src="assets/alidin.png" alt="alidin" aria-hidden="true">
     </div>
 
 
     <div class="mickey">
-        <img src="assets/baby-mickey-mouse-png-1.png" alt="">
+        <img src="assets/mickey.png" alt="mickey mouse" aria-hidden="true">
     </div>
     
 
     <div class="minnie">
-        <img src="assets/baby-minnie2.png" alt="">
+        <img src="assets/minnie.png" alt="minnie mouse" aria-hidden="true">
     </div>
         
 
