--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <button class="level level2" data-time="60" data-cardNumber="20">LEVEL2</button>
 
-                <button class="level level3" data-time="50" data-cardNumber="20"">LEVEL3</button>
+                <button class="level level3" data-time="50" data-cardNumber="20">LEVEL3</button>
             </div>
 
             <div class=" gameStart">
@@ -69,7 +69,7 @@
                 <button class="resetButton">RESET</button>
             </div>
 
-            <section class="container wrapper"></section>
+            <div class="container wrapper"></div>
         </div>
     </main>
 
