--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 
     <script src='https://code.jquery.com/jquery-3.2.1.min.js'
         integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=' crossorigin='anonymous'></script>
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
